[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/GameUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/LevelViewport.gd" type="Script" id=2]
[ext_resource path="res://scripts/UIScaler.gd" type="Script" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://scripts/scenes/StatsScene/StatsScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/OptionsPage.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ControlsPage.tscn" type="PackedScene" id=7]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=8]
[ext_resource path="res://graphic_themes/theme_test.tres" type="Theme" id=9]
[ext_resource path="res://globals/LevelBGMPlayer.gd" type="Script" id=10]
[ext_resource path="res://scripts/save.gd" type="Script" id=11]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="ButtonGroup" id=2]

[node name="GameUI" type="Control"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )

[node name="LevelViewport" type="ViewportContainer" parent="." groups=[
"Persist",
]]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
stretch = true
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="LevelViewport"]
pause_mode = 1
arvr = true
size = Vector2( 1024, 600 )
own_world = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="UIScaler" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Menu" type="Panel" parent="UIScaler"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 962.0
margin_bottom = 536.0
script = ExtResource( 4 )

[node name="StatsPage" parent="UIScaler/Menu" instance=ExtResource( 5 )]
visible = false
margin_left = -2.0
margin_top = -3.0
margin_right = -157.0
margin_bottom = 59.0

[node name="OptionsPage" parent="UIScaler/Menu" instance=ExtResource( 6 )]
visible = false
margin_left = -5.75018
margin_top = 2.75
margin_right = -159.75
margin_bottom = 5.75

[node name="ControlsPage" parent="UIScaler/Menu" instance=ExtResource( 7 )]
visible = false
margin_left = -2.0
margin_right = 335.0
margin_bottom = 601.0

[node name="QuitPage" type="Panel" parent="UIScaler/Menu"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 399.25
margin_top = -13.75
margin_right = 261.25
margin_bottom = -13.75

[node name="Label" type="Label" parent="UIScaler/Menu/QuitPage"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -97.0
margin_right = 2.0
margin_bottom = -42.0
custom_fonts/font = ExtResource( 8 )
text = "Do you want to quit?
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UIScaler/Menu/QuitPage"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 266.0
margin_top = -325.0
margin_right = -247.0
margin_bottom = -275.0

[node name="Yes" type="Button" parent="UIScaler/Menu/QuitPage/HBoxContainer"]
margin_right = 153.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "Yes"
flat = true

[node name="No" type="Button" parent="UIScaler/Menu/QuitPage/HBoxContainer"]
margin_left = 157.0
margin_right = 310.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "No"
flat = true

[node name="Save_dialog" type="FileDialog" parent="UIScaler/Menu"]
margin_left = 232.5
margin_top = 61.0
margin_right = 613.5
margin_bottom = 403.0
theme = ExtResource( 9 )
popup_exclusive = true
resizable = true
access = 2
filters = PoolStringArray( "*.save" )
current_dir = "C:/Users/Karol Tomaszewski/Documents/Pixel Zone"
current_path = "C:/Users/Karol Tomaszewski/Documents/Pixel Zone/"

[node name="Load_dialog" type="FileDialog" parent="UIScaler/Menu"]
material = SubResource( 1 )
margin_left = 232.5
margin_top = 61.0001
margin_right = 613.5
margin_bottom = 403.0
theme = ExtResource( 9 )
popup_exclusive = true
window_title = "Otw√≥rz plik"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.save" )
current_dir = "C:/Users/Karol Tomaszewski/Documents/Pixel Zone"
current_path = "C:/Users/Karol Tomaszewski/Documents/Pixel Zone/"

[node name="HBoxContainer" type="VBoxContainer" parent="UIScaler/Menu"]
anchor_bottom = 1.0
margin_left = 339.0
margin_top = 2.0
margin_right = 587.0
margin_bottom = 61.0
__meta__ = {
"_edit_group_": true
}

[node name="Save" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_right = 248.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "Save"
flat = true

[node name="Return" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 93.0
margin_right = 248.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "Return"
flat = true

[node name="Load" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 186.0
margin_right = 248.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 2 )
text = "Load"
flat = true

[node name="Options" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 279.0
margin_right = 248.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 2 )
text = "Options"
flat = true

[node name="Stats" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 372.0
margin_right = 248.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 2 )
text = "Stats"
flat = true

[node name="Quit" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 465.0
margin_right = 248.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
toggle_mode = true
group = SubResource( 2 )
text = "Quit"
flat = true

[node name="Controls" type="Button" parent="UIScaler/Menu/HBoxContainer"]
margin_top = 558.0
margin_right = 248.0
margin_bottom = 590.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "Controls"
flat = true

[node name="BGMPlayer" type="AudioStreamPlayer" parent="UIScaler/Menu"]
volume_db = -10.0
autoplay = true
script = ExtResource( 10 )
id = "Menu"

[node name="Node" type="Node" parent="."]
script = ExtResource( 11 )

[connection signal="pressed" from="UIScaler/Menu/QuitPage/HBoxContainer/Yes" to="UIScaler/Menu" method="_on_Yes_pressed"]
[connection signal="pressed" from="UIScaler/Menu/QuitPage/HBoxContainer/No" to="UIScaler/Menu" method="_on_No_pressed"]
[connection signal="file_selected" from="UIScaler/Menu/Save_dialog" to="Node" method="_on_Save_dialog_file_selected"]
[connection signal="file_selected" from="UIScaler/Menu/Load_dialog" to="Node" method="_on_Load_dialog_file_selected"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Save" to="UIScaler/Menu" method="_on_Save_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Return" to="UIScaler/Menu" method="_on_Return_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Load" to="UIScaler/Menu" method="_on_Load_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Options" to="UIScaler/Menu" method="_on_Options_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Stats" to="UIScaler/Menu" method="_on_Stats_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Quit" to="UIScaler/Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Controls" to="UIScaler/Menu" method="_on_Controls_pressed"]
